# SE4X-Companion

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  convert_full_text.py  prek.toml  pyproject.toml
.github/: CODEOWNERS
app/: __init__.py  db.py  forms.py
app/data/: README.md  card_manifest.json  card_manifest.py  cards.py  cards.toml  competitive_scenario_book.py  deep_space_planet_attributes.json  deep_space_planet_attributes.py  game_elements.json  game_elements.py  game_options.json  game_options.py  game_options.toml  master_rule_book.py  master_rulebook.json  master_rulebook.py  planet_attributes.py  scenario_list.py  scenario_rulebooks.py  scenario_rules.json  scenario_rules.py  scenarios.json  scenarios.py  scenarios_list.py  solo_scenario_book.py  tables.json  tables.py
app/routes/: __init__.py  cards.py  new_game.py  rules.py
app/static/css/: app.css
app/templates/: base.html  home.html
app/templates/cards/: index.html
app/templates/data/: rules.html
app/templates/new_game/: scenario.html
app/templates/pac/: planets.html
app/templates/rules/: _rulebook.html  csb.html  mrb.html  ssb.html
app/translations/: cards.pot  competitive_scenario_book.pot  game_elements.pot  game_options.pot  master_rule_book.pot  master_rulebook.pot  messages.pot  planet_attributes.pot  scenario_list.pot  scenario_rulebooks.pot  scenarios_list.pot  solo_scenario_book.pot  tables.pot
app/translations/fr/LC_MESSAGES/: cards.po  competitive_scenario_book.po  game_elements.po  game_options.po  messages.po  (+8 more)
tests/: conftest.py  test_app.py
